// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxRAC handles disabled state 1`] = `
<label
  className="sc-bczRLJ kDipcy"
  data-disabled={true}
  data-rac=""
  data-react-aria-pressable={true}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
>
  <span
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
  >
    <input
      checked={false}
      data-react-aria-pressable={true}
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="checkbox"
    />
  </span>
  <div
    data-slot="selection"
    slot="selection"
  />
  <span
    className="react-aria-Text"
  >
    Click Me
  </span>
</label>
`;

exports[`CheckboxRAC handles options 1`] = `
<label
  className="sc-bczRLJ kJYYoi"
  data-rac=""
  data-react-aria-pressable={true}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
>
  <span
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
  >
    <input
      checked={false}
      data-react-aria-pressable={true}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="checkbox"
    />
  </span>
  <div
    data-slot="selection"
    slot="selection"
  />
  <span
    className="react-aria-Text"
  >
    Click Me
  </span>
</label>
`;

exports[`CheckboxRAC matches snapshot 1`] = `
<label
  className="sc-bczRLJ leFkQj"
  data-rac=""
  data-react-aria-pressable={true}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
>
  <span
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
  >
    <input
      checked={false}
      data-react-aria-pressable={true}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="checkbox"
    />
  </span>
  <div
    data-slot="selection"
    slot="selection"
  />
  <span
    className="react-aria-Text"
  >
    Click Me
  </span>
</label>
`;

exports[`CheckboxRAC supports slot="selection" 1`] = `
<label
  className="sc-bczRLJ leFkQj"
  data-rac=""
  data-react-aria-pressable={true}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  slot="selection"
>
  <span
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
  >
    <input
      checked={false}
      data-react-aria-pressable={true}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="checkbox"
    />
  </span>
  <div
    data-slot="selection"
    slot="selection"
  />
  <span
    className="react-aria-Text"
  >
    Click Me
  </span>
</label>
`;
